[package]
name = "juno"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.16"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    # To exit QEMU
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # To direct output to host machine stdio
    "-serial", "stdio"
]
## Map the succcess exit code defined in main.rs
## to the code considered as succcess by QEMU
test-success-exit-code = 33
